arr-stack/raw/kavita/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://kavita.home.chrisscotmartin.com"
    gethomepage.dev/pod-selector: "app=kavita"
    gethomepage.dev/name: "Kavita"
    gethomepage.dev/description: "Read and download books"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "kavita.png"
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.authelia.svc.cluster.local/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.home.chrisscotmartin.com/?rd=$scheme://$host$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Method $request_method;
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Forwarded-Host $http_host;
      proxy_set_header X-Forwarded-Uri $request_uri;
      proxy_set_header X-Forwarded-For $remote_addr;
    nginx.ingress.kubernetes.io/auth-response-headers: "Remote-User,Remote-Name,Remote-Email,Remote-Groups"
spec:
  ingressClassName: external
  tls:
    - hosts: [kavita.home.chrisscotmartin.com]
      secretName: kavita-tls
  rules:
    - host: kavita.home.chrisscotmartin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kavita
                port:
                  number: 5000
